Fix z-index for popover https://trello.com/c/XYM1Ihud/8739-action-helper-tooltip-zindex

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -158,6 +158,10 @@ canvas {
   z-index: 10000;
 }
 
+.popover {
+  z-index: 10000 !important;
+}
+
 #login-div {
   padding: 10px;
   color: white;
